plugins {
    id("java")
    id("application")
    id("com.gradleup.shadow") version "8.3.5"
}
version = '1.2.0'

sourceSets.main.java.srcDirs = ["src"]
sourceSets.main.resources.srcDirs = ["src"]

application {
    mainClass = "joseta.JosetaBot"
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
}

compileJava.options.encoding = "UTF-8"

repositories{
    mavenCentral()
    maven{ url 'https://maven.xpdustry.fr/releases' }
    maven{ url 'https://www.jitpack.io' }
    maven{ url "https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository" }
}

dependencies{
    implementation("net.dv8tion:JDA:5.2.3") {
      // Optionally disable audio natives to reduce jar size by excluding `opus-java`
      exclude module: 'opus-java'
    }
    implementation("ch.qos.logback:logback-classic:1.5.12")
    implementation("org.xerial:sqlite-jdbc:3.47.1.0")
    implementation("com.github.Anuken.Arc:arc-core:v146")
}

shadowJar {
    archiveFileName = "JosetaBot.jar"
}
